--- a/webpage.html
+++ b/webpage.html
@@ -11,7 +11,11 @@
     <header>
         <a class="logo"><img src=""><b>Unknown Factory</b></a>
         <nav>
-            
+            <ul class="nav__links">
+                <li><a href="g-gallery.html">Gallery</a></li>
+                <li><a href="Chatt.html">Chat</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
         </nav>
         <a class="cta" href="#"><button>Contact</button></a>
     </header>
