--- a/webpage.html
+++ b/webpage.html
@@ -9,18 +9,17 @@
 </head>
 <body>
     <header>
-        <a class="logo"><img src=""><b>Unknown Factory</b></a>
+        <a class="logo"><img src="https://wallpaperaccess.com/full/1593261.jpg"><b>AUWFE</b></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="g-gallery.html">Gallery</a></li>
                 <li><a href="Chatt.html">Chat</a></li>
-                <li><a href="#">About</a></li>
             </ul>
         </nav>
         <a class="cta" href="#"><button>Contact</button></a>
     </header>
 	 <main class="container">
-	 <div class="Roblox-bg" src="https://wallpaperaccess.com/full/1593261.jpg">
+	 <div class="Roblox-bg" src="">
 	 </div>
 	 </main>
 	 <div class="banner-text">
