--- a/webpage.html
+++ b/webpage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a class="logo"><img src="https://wallpaperaccess.com/full/1593261.jpg"><b>AUWFE</b></a>
+        <a class="logo"><b>AUWFE</b></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="g-gallery.html">Gallery</a></li>
@@ -19,7 +19,7 @@
         <a class="cta" href="#"><button>Contact</button></a>
     </header>
 	 <main class="container">
-	 <div class="Roblox-bg" src="">
+	 <img src="https://wallpaperaccess.com/full/1593261.jpg">
 	 </div>
 	 </main>
 	 <div class="banner-text">
