--- a/webpage.html
+++ b/webpage.html
@@ -19,7 +19,7 @@
         <a class="cta" href="#"><button>Contact</button></a>
     </header>
 	 <main class="container">
-	 <img src="https://wallpaperaccess.com/full/1593261.jpg">
+	 <img class="webpage-bg"src="https://wallpaperaccess.com/full/1593261.jpg">
 	 </div>
 	 </main>
 	 <div class="banner-text">
