--- a/webpage.html
+++ b/webpage.html
@@ -27,5 +27,53 @@
 	 <p>Hi there, welcome to Ünknown Factory" just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
 	 <a href="Play.html">Play Now</a>
 	 </div>
+	 <div>
+		 <body>
+    <h1 style="color:white;">GIVEAWAY</h1>
+    <h2 style="color:white;">SCHOOL CHROMEBOOK UNBLOCK METHOD WANTED WITH REWARDS 20 dollars/2 discord nitros(not classic) and shoutout if gets into video. Check the requirements below to know more!!!</h2>
+    <div>
+        <h2 style="color:white;">Method Requirements:</h2>
+        <div>
+            <h3 style="color:white;">- A method that can unblock websites or YouTube videos or games or etc on a school Chromebook using websites or software vulnerabilities or programs(that runs on sites like Replit or etc) or etc.</h3>
+            <h3> </h3>
+            <h3 style="color:white;">- Everything used in the method has either no copyright or you are the copyright owner and you are willing to grant me the right to use it.</h3>
+            <h3></h3>
+            <h3 style="color:white;">- The method won’t do any damage to the Chromebook or any harm to any personnel and if it does any changes to the Chromebook, it has to be reversible.</h3>
+            <h3> </h3>
+            <h3> </h3>
+            <h4 style="color:white;">(Note: Method cannot be ones that I already used in my own videos I uploaded before)</h4>
+        </div>
+        <h2 style="color:white;">How to get the Reward:</h2>
+        <div>
+            <h3 style="color:white;">- Send me the method through the DM. (Take a screenshot as proof is recommended in case of misunderstandings)</h3>
+            <h3> </h3>
+            <h3 style="color:white;">- A random method will be chosen and I will create a video on it.</h3>
+            <h3> </h3>
+            <h3 style="color:white;">- The person that sent me the chosen method will receive the
+REWARD ONE DAY after the video of the method you found is public and not demonetized.</h3>
+            <h3> </h3>
+            <h3> </h3>
+            <h4 style="color:white;">(Note: You will only receive the reward if I create a video on your specific method. If two person sent me the same method, the first person will get the reward)</h4>
+        </div>
+        <h2 style="color:white;">Rewards:</h2>
+        <div>
+            <h3 style="color:white;">- 20.00 US DOLLARS! or 2 DISCORD NITROS(not classic, so it means you will get the full features)!!!</h3>
+            <h3> </h3>
+            <h3 style="color:white;">- FREE SHOUT OUT in that video!!!</h3>
+            <h3> </h3>
+            <h3 style="color:white;">- You will get additional 10.00 US DOLLARS! or  DISCORD NITRO(not classic, so it means you will get the full features) if the video of your method reaches 200 likes in under a month!!!</h3>
+            <h3> </h3>
+            <h3> </h3>
+            <h4 style="color:white;">(Note: You will receive the reward one day after the video of the method you found is public and not demonetized)</h4>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+        new Crate({
+            server: '779198290822561792',
+            channel: '779198290822561794'
+        })
+    </script>
+<body>
+         </div>
 </body>
 </html>
