--- a/webpage.html
+++ b/webpage.html
@@ -24,7 +24,7 @@
 	 </main>
 	 <div class="banner-text">
 	 <h3>Unknown Factory</h3>
-	 <p>Hi there, welcome to Ünknown Factory" just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
+	 <p>Hi there, welcome to AUWFF just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
 	 <a href="Play.html">Play Now</a>
 	 </div>
 	 <div>
