--- a/webpage.html
+++ b/webpage.html
@@ -27,6 +27,28 @@
 	 <p>Hi there, welcome to AUWFF just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
 	 <a href="Play.html">Play Now</a>
     </div>
+<center><a href="https://nogan.xyz">
+<img border="0" alt="NoganLogo" src="/logo.png" width="173" height="90">
+<a></center>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2BMECDGCQX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2BMECDGCQX');
+</script>
+<script async src="https://cse.google.com/cse.js?cx=c61967a4b68845c81"></script>
+<div class="gcse-search"></div>
+<style>
+body {
+  background-color:#e6f1de
+;
+}
+<style/>
+<!DOCTYPE html/>
+
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
         new Crate({
             server: '779198290822561792',
