--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<h1>Password Required</h1>
 </head>
 <body>
-	<form class="passform">
+	<form class="passform" action="webpage.html">
 		<input type="password" required id="pass1">
 		<input type="submit">
 	</form>
