--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AUWFE</title>
 	<h1>Password Required</h1>
+	<script src="password.js"></script>
 </head>
 <body>
 	<form class="passform" action="webpage.html">
