--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="password.js"></script>
 </head>
 <body>
-	<form class="passform" action="webpage.html">
+	<form class="passform" action="webpage.html" onsubmit="return passcheck() ">
 		<input type="password" required id="pass1">
 		<input type="submit">
 	</form>
