--- a/webpage.html
+++ b/webpage.html
@@ -23,7 +23,7 @@
 	 </div>
 	 </main>
 	 <div class="banner-text">
-	 <h3>Unknown Factory</h3>
+	 <h3>AUWFF</h3>
 	 <p>Hi there, welcome to AUWFF just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
 	 <a href="Play.html">Play Now</a>
     </div>
