--- a/g-gallery.html
+++ b/g-gallery.html
@@ -84,28 +84,40 @@
 </nav>
 <div class="container">
 	<div class ="gallery">
-		<img src="https://ichef.bbci.co.uk/news/400/cpsprodpb/883F/production/_121297843_roblox1.png">
+		<img src="">
 		<div class="desc"><a href="Play.html">Roblx</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="https://images.macrumors.com/t/MU49mkqkTLsK9y7h4wGO2nj5RQQ=/400x0/article-new/2021/03/Instagram-Feature-2.jpg?lossy">
+		<img src="">
 		<div class="desc"><a href="Insta.html">Instagram</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/jason-ortego-TznjqhCHR9g-unsplash.jpg">
-		<div class="desc"><a>empty ಥ╭╮ಥ</a></div>
+		<img src="">
+		<div class="desc"><a>empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/jason-ortego-TznjqhCHR9g-unsplash.jpg">
-		<div class="desc"><a>empty ಥ╭╮ಥ</a></div>
+		<img src="">
+		<div class="desc"><a>empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/jason-ortego-TznjqhCHR9g-unsplash.jpg">
-		<div class="desc"><a>empty ಥ╭╮ಥ</a></div>
+		<img src="">
+		<div class="desc"><a>empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/jason-ortego-TznjqhCHR9g-unsplash.jpg">
-		<div class="desc"><a>empty ಥ╭╮ಥ</a></div>
+		<img src="">
+		<div class="desc"><a>empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a>empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a>empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a>empty</a></div>
 	</div>
 	
 	
