--- a/Chatt.html
+++ b/Chatt.html
@@ -1,6 +1,13 @@
 <DOCTYPE html>
 <head>
 <title></title>
+  <style>
+    .elfsight-app-8afc4178-9ade-4f24-843b-100658167285 {
+      margin: 0;
+      top: 100px;
+      left: 100px;
+    }
+  </style>
 <head>
 <body>
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
