--- a/webpage.html
+++ b/webpage.html
@@ -13,10 +13,9 @@
         <nav>
             <ul class="nav__links">
                 <li><a href="g-gallery.html">Gallery</a></li>
-                <li><a href="Chatt.html">Chat</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>Contact</button></a>
+        <a class="cta" href="Chatt.html"><Chxt>Contact</button></a>
     </header>
 	 <main class="container">
 	 <img class="webpage-bg"src="https://wallpaperaccess.com/full/1593261.jpg">
