--- a/Chatt.html
+++ b/Chatt.html
@@ -2,15 +2,47 @@
 <head>
 <title></title>
   <style>
-    .elfsight-app-8afc4178-9ade-4f24-843b-100658167285 {
-      margin: 0;
-      top: 100px;
-      left: 100px;
-    }
+    nav{
+			background: #24252A;
+			width: 100%;
+			overflow: auto;
+		}
+		ul{
+			margin: 0;
+			padding: 0;
+			list-style:none;
+		}
+		li{
+			float: left;
+		}
+		nav a{
+			width: 120%;
+			display: block;
+			text-decoration: none;
+			text-align: center;
+			background: #24252A;
+			font-size: 17px;
+			color: white;
+			padding: 20px 10px;
+			font-family: Montserret;
+		}
+		nav a:hover{
+			background-color: rgba(0,136,169,0.8);
+			color:black;
+		}
+    a{
+			text-decoration: none;
+			color: Black;
+			font-family: Arial;
+			font-size: 17px;
+		}
   </style>
 <head>
 <body>
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-8afc4178-9ade-4f24-843b-100658167285"></div>
+  <nav>
+	<ul>
+	<li><a href ="webpage.html"> HOME</a></li>
+	</ul>
+</nav>
 </body>
 </html>
