--- a/webpage.html
+++ b/webpage.html
@@ -15,7 +15,7 @@
                 <li><a href="g-gallery.html">Gallery</a></li>
             </ul>
         </nav>
-        <a class="cta" href="Chatt.html"><Chxt>Contact</button></a>
+        <a class="cta" href="Chatt.html"><button>Chxt</button></a>
     </header>
 	 <main class="container">
 	 <img class="webpage-bg"src="https://wallpaperaccess.com/full/1593261.jpg">
