--- a/Chatt.html
+++ b/Chatt.html
@@ -1,51 +1,22 @@
-<DOCTYPE html>
-<head>
-<title></title>
-  <style>
-	  *{
-		  box-sizing: border-box;
-	  }
-    nav{
-			background: #24252A;
-			width: 100%;
-			overflow: auto;
-		}
-		ul{
-			margin: 0;
-			padding: 0;
-			list-style:none;
-		}
-		li{
-			float: left;
-		}
-		nav a{
-			width: 120%;
-			display: block;
-			text-decoration: none;
-			text-align: center;
-			background: #24252A;
-			font-size: 17px;
-			color: white;
-			padding: 20px 10px;
-			font-family: Montserret;
-		}
-		nav a:hover{
-			background-color: rgba(0,136,169,0.8);
-			color:black;
-		}
-    a{
-			text-decoration: none;
-			color: Black;
-			font-family: Arial;
-			font-size: 17px;
-		}
-  </style>
-<head>
-<body>
-  <nav>
-	<ul>
-	<li><a href ="webpage.html"> HOME</a></li>
-	</ul>
-</nav>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title> Chxt </title>
+    <!-- Google fonts. -->
+    <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
+    <!-- Use font awesome icons. -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- Use firebase app and database. -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+
+    <!-- The CSS and JS file must be declared after the things above-->
+    <link rel="stylesheet" href="chatt.css"/>
+    <script type="text/javascript" src="chat.js"></script>
+
+  </head>
+  <body>
+  </body>
 </html>
