--- a/Chatt.html
+++ b/Chatt.html
@@ -1,1 +1,15 @@
-
+<DOCTYPE html>
+  <head>
+    <title>Chxt</title>
+    <script src="https://www.momentcrm.com/embed"></script>
+<script>
+  MomentCRM('init', {
+    'teamVanityId': 'duck',
+    'doChat': true,
+    'doTracking': true,
+  });
+</script>
+  </head>
+  <body>
+  </body>
+  </html>
