--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html>
 <head>
 	<title>AUWFE</title>
-	<h1>Password Required</h1>
 	<script src="password.js"></script>
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
+	<div class="container">
+		<div class="INC">
+	<h1 class="title">Password Required</h1>
 	<form class="passform" action="webpage.html" onsubmit="return passcheck() ">
 		<input type="password" required id="pass1">
-		<input type="submit">
+		<input style="background-color: black; color: white;border-radius: 5px;"type="submit">
 	</form>
-	
+		</div>
+	</div>
+	<div class="container-2">
+		<div class="INC-2">
+			<h1>Dont Know/Forgot Passsword?</h1>
+			<h2 style="color:white;font-size: 30px;">Add me on insta <b style="color: lightblue;"><u>[@spets_n4s]</u></b>. Ask me for the password and ill give it to ya.</h2>
+		</div>
+	</div>
 </body>
 </html>
