--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>AUWFE</title>
 	<script src="password.js"></script>
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="password.css">
 </head>
 <body>
 	<div class="container">
