--- a/webpage.html
+++ b/webpage.html
@@ -1,40 +1,37 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>webpage</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Webpage.css">  
-</head>
-<body>
-    <header>
-        <a class="logo"><b>AUWFE</b></a>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="g-gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="Chatt.html"><button>Chxt</button></a>
-    </header>
-	 <main class="container">
-	 <img class="webpage-bg"src="https://wallpaperaccess.com/full/1593261.jpg">
-	 </div>
-	 </main>
-	 <div class="banner-text">
-	 <h3>AUWFF</h3>
-	 <p>Hi there, welcome to AUWFF just a simple website to chill and have fun, click the <a href="g-gallery.html">Gallery<a> button on the top right to get started.</p>
-	 <a href="Play.html">Play Now</a>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+<doctype html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Website</title>
+                <link rel="stylesheet" href="Webpage.css">
+	</head>
+	<body>
+		<div class="hero ">
+			
+			<video autoplay loop muted plays-inline class="back-video">
+				<source src="/home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/background.mp4" type="video/mp4">
+			</video>
+			
+			<nav>
+				<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/logo3-removebg-preview.png" class="logo">
+				<ul>
+					<li><a href="https://www.youtube.com/watch?v=QPkwvtUAsvw" target="_blank">BACKGROUND</a></li>
+					<li><a href="g-gallery.html" >GALLERY</a></li>
+					<li><a href="#">CONTACT </a></li>
+				</ul>
+			</nav>
+			<div class="content">
+				<h1>AUWFE</h1>
+				<a href="g-gallery.html">GALLERY</a>
+			</div>
+		</div>
+		<div>
+			<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
         new Crate({
             server: '779198290822561792',
             channel: '779198290822561794'
         })
     </script>
-    <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there! ✌️", message: "How may we help you? Just send us a message now to get assistance.", color: "#1C86FA", position: "left", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now", button: "request.", device: "everywhere", logo: "https://d2r80wdbkwti6l.cloudfront.net/Z6FpRrVCPcEXwwi3syjftHmEpbqngoZO.jpg", person: "https://d2r80wdbkwti6l.cloudfront.net/omQJZJ4XYixUWgRQq3UTcdCeHymLxD2s.jpg", services: [{"name":"mail","content":"erehjeager124@gmail.com"}]})</script>
-
-	 </div>
-</body>
-</html>
+		</div>
+	</body>
+</html> 
