--- a/webpage.html
+++ b/webpage.html
@@ -13,7 +13,7 @@
 			</video>
 			
 			<nav>
-				<img src="file:///home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/logo3-removebg-preview.png" class="logo">
+				<h1 class="logo">AUWFE</h1>
 				<ul>
 					<li><a href="https://www.youtube.com/watch?v=QPkwvtUAsvw" target="_blank">BACKGROUND</a></li>
 					<li><a href="g-gallery.html" >GALLERY</a></li>
