--- a/webpage.html
+++ b/webpage.html
@@ -4,6 +4,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Website</title>
                 <link rel="stylesheet" href="Webpage.css">
+		<style>
+			.h1{
+				color: white;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="hero">
