--- a/webpage.html
+++ b/webpage.html
@@ -4,17 +4,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Website</title>
                 <link rel="stylesheet" href="Webpage.css">
-		<style>
-			.h1{
-				color: white;
-			}
-		</style>
+
 	</head>
 	<body>
 		<div class="hero">
 			
 			<video autoplay loop muted plays-inline class="back-video">
-				<source src="/home/chronos/u-8e3c6ae346d105f544c82e963c3e51f4e3484dd9/MyFiles/Downloads/background.mp4" type="video/mp4">
+				<source src="Downloads/background.mp4" type="video/mp4">
 			</video>
 			
 			<nav>
