--- a/g-gallery.html
+++ b/g-gallery.html
@@ -85,7 +85,7 @@
 <div class="container">
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="Play.html">Roblx</a></div>
+		<div class="desc"><a href="https://quick-links.landonorr.repl.co/1v1-lol/index.html#">1v1.lol</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
