--- a/g-gallery.html
+++ b/g-gallery.html
@@ -89,7 +89,7 @@
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="Insta.html">Instagram</a></div>
+		<div class="desc"><a href="">empty/a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
@@ -106,6 +106,7 @@
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a>empty</a></div>
+	<footer>Click N Enjoy</footer>
 	</div>
 	<div class ="gallery">
 		<img src="">
@@ -122,7 +123,7 @@
 	
 	
 </div>
-	<footer>Click N Enjoy</footer
+	<footer>Still In Development</footer>
 </body>
 </html>
 
