--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<div class="INC">
 	<h1 class="title">Password Required</h1>
-	<form class="passform" action="webpage.html" onsubmit="return passcheck() ">
+	<form class="passform" action="Valid.html" onsubmit="return passcheck() ">
 		<input type="password" required id="pass1">
 		<input style="background-color: black; color: white;border-radius: 5px;"type="submit">
 	</form>
