--- a/Valid.html
+++ b/Valid.html
@@ -6,9 +6,10 @@
 
   <body>
     <button>
-      Good Job you passed, now for your reward click me to to go to webpage.
+      Open Link
     </button>
     <script>
+      alert('IM NOT Responsible if you get caught, use at your won risk')
       var urlobj = new window.URL(window.location)
       var url = "https://heiikam.github.io/webpage.html?";
       if (url) {
