--- a/g-gallery.html
+++ b/g-gallery.html
@@ -38,7 +38,7 @@
 			background-color: rgba(0,136,169,0.8);
 			color:black;
 		}
-		.container{
+		.container1{
 			max-width: 1200px;
 			margin:auto;
 			background:#f2f2f2;
@@ -55,6 +55,27 @@
 			height:auto;
 		}
 		.desc{
+			padding: 15px;
+			text-align: center;
+		}
+		
+		.container2{
+			max-width: 1200px;
+			margin:auto;
+			background:#f2f2f2;
+			overflow:auto;
+		}
+		.gallery2{
+			margin: 5px;
+			border: 1px solid #ccc;
+			float:left;
+			width:390px;
+		}
+		.gallery2 img{
+			width: 100%;
+			height:auto;
+		}
+		.desc2{
 			padding: 15px;
 			text-align: center;
 		}
@@ -82,52 +103,180 @@
 	<li><a href ="webpage.html"> HOME</a></li>
 	</ul>
 </nav>
-<div class="container">
+<div class="container1">
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a href="https://quick-links.landonorr.repl.co/1v1-lol/index.html#">1v1.lol</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="">empty/a></div>
+		<div class="desc"><a href="https://gadget07.github.io/cookieclicker/">Cookie Clicker</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://wwwtyro.github.io/Astray/">Astray</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://dart-lang.github.io/sample-pop_pop_win/">Pop Pop Win</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://noahmoroze.com/swap/">Swap</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://zop.zolmeister.com/">Zop</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://stendhalgame.org/">stendhal</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://xingye.me/game/eatkano/">Eat Kano</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a>empty</a></div>
+		<div class="desc"><a href="https://xingye.me/game/squishybird/index.htm">Squish The Bird</a></div>
 	</div>
-	
-	
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://g.vsane.com/game/721/">Rythem Record</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/xdtz/index.html">Christmas Ski Battle</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/2/index.html">Non Can Die</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/22/index.html">Pac-Man</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/37/index.html">Tetris</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a hre="https://xingye.me/game/games/maya/">Mayan Legend</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/hmk/">Wood Escape</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/hgy/">Draw A Circle</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://xingye.me/game/games/zuqiu/">Roll A Ball</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://minecraftchromedev.github.io/eaglecraftsingleplayer/Singleplayer.html">Minecraft</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://flash.jacobmcpherson1.repl.co/binding.html">Binding Of Isaacc</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://chess.landonorr.repl.co/">Chess</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">Drift Hunter</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://28klotlucas2.github.io/Mario64webgl/">Mario-64</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://28klotlucas2.github.io/Funkin-Html5/">Friday Night Funkin</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://28klotlucas2.github.io/Minecraft-2D/">Minecraft-2D</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+		
+</div>
+		<footer>Websites</footer>
+<div class="container2">
+		<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://sites.google.com/view/kanesmath/home?authuser=1">Kanes Unblxcked Gxmes</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://sites.google.com/view/cybercityunblocked?pli=1&authuser=1">The Cyber City</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://aboutblank.damicky.repl.co/">My Website</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://28klotlucas2.github.io/Geekprank/">GreekPrank</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Unblxcker</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a href="https://xlegends.github.io/gxmehub/gxmes/">Xlegends</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
+	</div>
 </div>
 	<footer>Still In Development</footer>
 </body>
 </html>
-
-
-
-
-
-
