--- a/g-gallery.html
+++ b/g-gallery.html
@@ -230,11 +230,11 @@
 <div class="container2">
 		<div class ="gallery2">
 		<img src="">
-		<div class="desc2"><a href="https://sites.google.com/view/kanesmath/home?authuser=1">Kanes Unblxcked Gxmes</a></div>
+		<div class="desc2"><a>https://sites.google.com/view/kanesmath/home?authuser=1</a></div>
 	</div>
 	<div class ="gallery2">
 		<img src="">
-		<div class="desc2"><a href="https://sites.google.com/view/cybercityunblocked?pli=1&authuser=1">The Cyber City</a></div>
+		<div class="desc2"><a>https://sites.google.com/view/cybercityunblocked?pli=1&authuser=1</a></div>
 	</div>
 	<div class ="gallery2">
 		<img src="">
@@ -242,15 +242,19 @@
 	</div>
 	<div class ="gallery2">
 		<img src="">
-		<div class="desc2"><a href="https://28klotlucas2.github.io/Geekprank/">GreekPrank</a></div>
+		<div class="desc2"><a>https://28klotlucas2.github.io/Geekprank/</a></div>
 	</div>
 	<div class ="gallery2">
 		<img src="">
-		<div class="desc2"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Unblxcker</a></div>
+		<div class="desc2"><a>Empty</a></div>
 	</div>
 	<div class ="gallery2">
 		<img src="">
-		<div class="desc2"><a href="https://xlegends.github.io/gxmehub/gxmes/">Xlegends</a></div>
+		<div class="desc2"><a>https://xlegends.github.io/gxmehub/gxmes/</a></div>
+	</div>
+	<div class ="gallery2">
+		<img src="">
+		<div class="desc2"><a>empty</a></div>
 	</div>
 	<div class ="gallery2">
 		<img src="">
