--- a/g-gallery.html
+++ b/g-gallery.html
@@ -105,7 +105,7 @@
 </nav>
 <div class="container1">
 	<div class ="gallery">
-		<img src="">
+		<img src="images/1v1.jpg">
 		<div class="desc"><a href="https://quick-links.landonorr.repl.co/1v1-lol/index.html#">1v1.lol</a></div>
 	</div>
 	<div class ="gallery">
