--- a/g-gallery.html
+++ b/g-gallery.html
@@ -109,19 +109,19 @@
 		<div class="desc"><a href="https://quick-links.landonorr.repl.co/1v1-lol/index.html#">1v1.lol</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/cookie.jpg">
 		<div class="desc"><a href="https://gadget07.github.io/cookieclicker/">Cookie Clicker</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/astray.jpg">
 		<div class="desc"><a href="https://wwwtyro.github.io/Astray/">Astray</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/popwin.jpg">
 		<div class="desc"><a href="https://dart-lang.github.io/sample-pop_pop_win/">Pop Pop Win</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/swap.jpg">
 		<div class="desc"><a href="https://noahmoroze.com/swap/">Swap</a></div>
 	</div>
 	<div class ="gallery">
@@ -133,7 +133,7 @@
 		<div class="desc"><a href="https://stendhalgame.org/">stendhal</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/kano.jpg">
 		<div class="desc"><a href="https://xingye.me/game/eatkano/">Eat Kano</a></div>
 	</div>
 	<div class ="gallery">
