--- a/g-gallery.html
+++ b/g-gallery.html
@@ -125,11 +125,11 @@
 		<div class="desc"><a href="https://noahmoroze.com/swap/">Swap</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/square.jpg">
 		<div class="desc"><a href="https://zop.zolmeister.com/">Zop</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="https://stendhalgame.org/">stendhal</a></div>
 	</div>
 	<div class ="gallery">
@@ -137,91 +137,91 @@
 		<div class="desc"><a href="https://xingye.me/game/eatkano/">Eat Kano</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/squish.jpg">
 		<div class="desc"><a href="https://xingye.me/game/squishybird/index.htm">Squish The Bird</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/record.jpg">
 		<div class="desc"><a href="https://g.vsane.com/game/721/">Rythem Record</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/ski.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/xdtz/index.html">Christmas Ski Battle</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/noone.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/2/index.html">Non Can Die</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/pac.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/22/index.html">Pac-Man</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/tetris.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/37/index.html">Tetris</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a hre="https://xingye.me/game/games/maya/">Mayan Legend</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/wood.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/hmk/">Wood Escape</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/circle.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/hgy/">Draw A Circle</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/roll.jpg">
 		<div class="desc"><a href="https://xingye.me/game/games/zuqiu/">Roll A Ball</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/minecraft.jpg">
 		<div class="desc"><a href="https://minecraftchromedev.github.io/eaglecraftsingleplayer/Singleplayer.html">Minecraft</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/binding.jpg">
 		<div class="desc"><a href="https://flash.jacobmcpherson1.repl.co/binding.html">Binding Of Isaacc</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/chess.jpg">
 		<div class="desc"><a href="https://chess.landonorr.repl.co/">Chess</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
-		<div class="desc"><a href="">Drift Hunter</a></div>
+		<img src="images/notworking.jpg">
+		<div class="desc"><a href="#">Drift Hunter</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Mario64webgl/">Mario-64</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/friday.jpg">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Funkin-Html5/">Friday Night Funkin</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/minecraft-2d.jpg">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Minecraft-2D/">Minecraft-2D</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="">
+		<img src="images/.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 		
