--- a/g-gallery.html
+++ b/g-gallery.html
@@ -193,7 +193,7 @@
 		<div class="desc"><a href="#">Drift Hunter</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/mario.jpg">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Mario64webgl/">Mario-64</a></div>
 	</div>
 	<div class ="gallery">
@@ -205,23 +205,23 @@
 		<div class="desc"><a href="https://28klotlucas2.github.io/Minecraft-2D/">Minecraft-2D</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/.jpg">
+		<img src="images/notworking.jpg">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 		
