--- a/g-gallery.html
+++ b/g-gallery.html
@@ -52,7 +52,7 @@
 		}
 		.gallery img{
 			width: 100%;
-			height:auto;
+			height: 100%;
 		}
 		.desc{
 			padding: 15px;
@@ -73,7 +73,7 @@
 		}
 		.gallery2 img{
 			width: 100%;
-			height:auto;
+			height:100%
 		}
 		.desc2{
 			padding: 15px;
