--- a/g-gallery.html
+++ b/g-gallery.html
@@ -105,123 +105,123 @@
 </nav>
 <div class="container1">
 	<div class ="gallery">
-		<img src="images/1v1.jpg">
+		<img src="">
 		<div class="desc"><a href="https://quick-links.landonorr.repl.co/1v1-lol/index.html#">1v1.lol</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/cookie.jpg">
+		<img src="">
 		<div class="desc"><a href="https://gadget07.github.io/cookieclicker/">Cookie Clicker</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/astray.jpg">
+		<img src="">
 		<div class="desc"><a href="https://wwwtyro.github.io/Astray/">Astray</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/popwin.jpg">
+		<img src="">
 		<div class="desc"><a href="https://dart-lang.github.io/sample-pop_pop_win/">Pop Pop Win</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/swap.jpg">
+		<img src="">
 		<div class="desc"><a href="https://noahmoroze.com/swap/">Swap</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/square.jpg">
+		<img src="">
 		<div class="desc"><a href="https://zop.zolmeister.com/">Zop</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="https://stendhalgame.org/">stendhal</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/kano.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/eatkano/">Eat Kano</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/squish.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/squishybird/index.htm">Squish The Bird</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/record.jpg">
+		<img src="">
 		<div class="desc"><a href="https://g.vsane.com/game/721/">Rythem Record</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/ski.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/xdtz/index.html">Christmas Ski Battle</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/noone.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/2/index.html">Non Can Die</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/pac.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/22/index.html">Pac-Man</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/tetris.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/37/index.html">Tetris</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a hre="https://xingye.me/game/games/maya/">Mayan Legend</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/wood.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/hmk/">Wood Escape</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/circle.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/hgy/">Draw A Circle</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/roll.jpg">
+		<img src="">
 		<div class="desc"><a href="https://xingye.me/game/games/zuqiu/">Roll A Ball</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/minecraft.jpg">
+		<img src="">
 		<div class="desc"><a href="https://minecraftchromedev.github.io/eaglecraftsingleplayer/Singleplayer.html">Minecraft</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/binding.jpg">
+		<img src="">
 		<div class="desc"><a href="https://flash.jacobmcpherson1.repl.co/binding.html">Binding Of Isaacc</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/chess.jpg">
+		<img src="">
 		<div class="desc"><a href="https://chess.landonorr.repl.co/">Chess</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="#">Drift Hunter</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/mario.jpg">
+		<img src="">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Mario64webgl/">Mario-64</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/friday.jpg">
+		<img src="">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Funkin-Html5/">Friday Night Funkin</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/minecraft-2d.jpg">
+		<img src="">
 		<div class="desc"><a href="https://28klotlucas2.github.io/Minecraft-2D/">Minecraft-2D</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 	<div class ="gallery">
-		<img src="images/notworking.jpg">
+		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
 		
