--- a/g-gallery.html
+++ b/g-gallery.html
@@ -190,7 +190,7 @@
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="#">Drift Hunter</a></div>
+		<div class="desc"><a href="https://yexex.github.io/paperio2/index.html">Paper.io</a></div>
 	</div>
 	<div class ="gallery">
 		<img src="">
