--- a/g-gallery.html
+++ b/g-gallery.html
@@ -206,20 +206,55 @@
 	</div>
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="">empty</a></div>
+		<div class="desc"><a href="https://yexex.github.io/retro-bowl/retro.html">Retro Bowl</a></div>
 	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://yexex.github.io/slope/index.html">Slope</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://yexex.github.io/geo.html">Geometry Dash</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://yexex.github.io/yohoho/index.html">Yohoho.io</a></div>
+	</div>
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="https://yexex.github.io/motox3m/index.html">Moto x3m</a></div>
+	</div>
+	
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
+	
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
+	
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a href="">empty</a></div>
 	</div>
+	
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	
+	<div class ="gallery">
+		<img src="">
+		<div class="desc"><a href="">empty</a></div>
+	</div>
+	
 	<div class ="gallery">
 		<img src="">
 		<div class="desc"><a href="">empty</a></div>
