--- a/g-gallery.html
+++ b/g-gallery.html
@@ -227,7 +227,7 @@
 	
 	<div class ="gallery">
 		<img src="">
-		<div class="desc"><a href="">empty</a></div>
+		<div class="desc"><a href="https://yexex.github.io/basketball-stars/index.html">Basketball Stars</a></div>
 	</div>
 	
 	<div class ="gallery">
