--- a/square.html
+++ b/square.html
@@ -1,1 +1,20 @@
+<link rel="stylesheet" href="square.css">
+   <div class="context">
+        <h1>Pure Css Animated Background</h1>
+    </div>
 
+
+<div class="area" >
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+    </div >
